<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/navMenuWidth"
    android:layout_height="match_parent"
    android:background="@color/navMenuBg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wenshuTV"
        style="@style/textViewWhite11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/drawable_padding_5dp"
        android:layout_marginStart="@dimen/marginCommon"
        android:layout_marginTop="@dimen/mar10dp"
        android:drawableLeft="@mipmap/ic_spot"
        android:drawablePadding="@dimen/drawable_padding_5dp"
        android:text="@string/wenshu" />

    <View
        android:id="@+id/wenshuV"
        style="@style/view_commonHori"
        android:layout_marginLeft="@dimen/drawable_padding_5dp"
        android:layout_marginStart="@dimen/drawable_padding_5dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/wenshuTV"
        android:background="@android:color/white" />

        <RadioGroup
            android:id="@+id/rg_gop"
            android:layout_below="@id/wenshuTV"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/menu_rb_twd"
            style="@style/menuRadio"
            android:layout_marginTop="@dimen/mar10dp"
            android:checked="true"
            android:text="@string/tiwendan" />
        <RadioButton
                android:id="@+id/menu_rb_xtd"
                style="@style/menuRadio"
                android:layout_marginTop="@dimen/mar10dp"

                android:text="@string/xuetangdan" />
    </RadioGroup>

    <ExpandableListView
        android:id="@+id/wenshu_menu_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rg_gop"
        android:layout_marginTop="@dimen/mar10dp" />

</RelativeLayout>